# strands-main-repo

./: .gitignore
agent-memory/: .env.example  companion_example.py  main.py  pyproject.toml
agent-skill/: .env.example  converter_example.py  main.py  pyproject.toml
agent-skill/data/: ventas_2024.json  ventas_q1q2.csv
agent-skill/rust-code/rust-calculator/: build.sh
agent-skill/rust-code/rust-calculator/src/: main.rs
agent-skill/rust-code/rust-converter/: Cargo.toml  build.sh
agent-skill/rust-code/rust-converter/src/: main.rs
agent-skill/skills/procesar-ventas/: SKILL.md
agent-skill/skills/procesar-ventas/scripts/: process.py
agent-skill/skills/redactar-email/: SKILL.md
agent-skill/skills/rust-calculator/: SKILL.md
agent-skill/skills/rust-calculator/references/: API.md
agent-skill/skills/rust-converter/: SKILL.md
cut-ai-token/: main.py  pyproject.toml
dynamodb-strands/: README.md  samconfig.toml  template.yaml
dynamodb-strands/.aws-sam/: build.toml
dynamodb-strands/agent/: .env.example  dynamodb_example.py  pyproject.toml
dynamodb-strands/rust-query/: Cargo.toml  build.sh
dynamodb-strands/rust-query/src/: main.rs
dynamodb-strands/src/: seed_data.py
gemini-strands-example/: conv_history.py  main.py  multiple_outputs.py  pyproject.toml  samconfig.toml  template.yaml
gemini-strands-example/.aws-sam/: build.toml
gemini-strands-example/src/: Makefile  lambda_agent.py  lambda_test.py  requirements.txt
tools-rust-calculator/: Cargo.toml  test_agent.py  tool.py
xai-strands/: main.py  pyproject.toml
(+7 files in other folders)
