[project]
name = "xai-strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.38.0",
    "strands-xai>=0.2.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "strands-agents-tools>=0.5.2",
]
